@@ -1,8 +1,11 @@
 Current Version: @@VERSION@@
 
-ctags-5.3.1 (Thu Aug 22 2002)
+ctags-5.3.1 (Sun Aug 25 2002)
 * Fixed incorrect tag kinds [Verilog].
 * Fixed null tags for unnamed BLOCK DATA statements [Fortran].
+* Renamed tagsSetSorted() to tagsSetSortType() and "sorted" member of
+  tagFileInfo structure of readtags library to "sort".
+* Added new function, tagsFirst() to readtags library.
 
 ctags-5.3 (Wed Jul 17 2002)
 * Allowed --etags-include option without input files.
